[platform] drop YJP agent .vmoptions lines on import (IDEA-260909)
GitOrigin-RevId: 906dc008ef34a702f2d1ba7f119a9b6c25b1b00a